Added HTML CSS JS from 202B

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,2 +1,2 @@
-GENJI_URL: http://127.0.0.1:5011
-HANZO_URL: http://127.0.0.1:5012
+GENJI_URL: https://genji.fyp.anonoz.com
+HANZO_URL: https://hanzo.fyp.anonoz.com
