--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,9 +1,8 @@
-development:
-  adapter: async
-
-test:
-  adapter: async
-
-production:
+redis: &redis
   adapter: redis
   url: redis://localhost:6379/1
+
+production: *redis
+development: *redis
+test:
+  adapter: async
