--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,4 @@
-GENJI_URL: https://genji.fyp.anonoz.com
-HANZO_URL: https://hanzo.fyp.anonoz.com
+# GENJI_URL: https://genji.fyp.anonoz.com
+# HANZO_URL: https://hanzo.fyp.anonoz.com
+# LSTM_URL:  http://localhost:5013
 SECRET_KEY_BASE: whatever123
