Modified classifier services to interact with new consolidated classifier microservices.
Also:
* Added pages that list predictions and corrections for analysis.
* This version is demoed during FYP day.

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,4 @@
-GENJI_URL: https://genji.fyp.anonoz.com
-HANZO_URL: https://hanzo.fyp.anonoz.com
-LSTM_URL:  http://localhost:5013
+# GENJI_URL: https://genji.fyp.anonoz.com
+# HANZO_URL: https://hanzo.fyp.anonoz.com
+# LSTM_URL:  http://localhost:5013
 SECRET_KEY_BASE: whatever123
