--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,6 @@
 redis: &redis
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV['REDIS_URL'] || 'redis://localhost:6379/1' %>
 
 production: *redis
 development: *redis
