Removed uglifier due to issues with ES6

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,10 +1,17 @@
 FROM ruby:2.4.1
 MAINTAINER Anonoz <honsiongchs@gmail.com>
+RUN mkdir -p /app
+WORKDIR /app
 RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs libgmp3-dev
-RUN mkdir /athena
-WORKDIR /athena
-ADD Gemfile /athena/Gemfile
-ADD Gemfile.lock /athena/Gemfile.lock
+
+ENV RAILS_ENV production
+
+COPY Gemfile Gemfile.lock ./
 RUN gem install bundler
-RUN bundle install -j 8
-ADD . /athena
+RUN bundle install -j 12 --without development test
+
+COPY . /app
+RUN bundle exec rails assets:precompile
+
+EXPOSE 3000
+CMD ["rails", "server", "-b", "0.0.0.0"]
