--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,44 @@ services:
       - '6002'
 
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
       - ./:/app
-    command: foreman start
+      - bundler_gems:/usr/local/bundle/
+    command: bundle exec rails s -p 3000 -b 0.0.0.0
     ports:
       - "3001:3000"
+    depends_on:
+      - postgres
+      - redis
+      - skipgram
+      - dbow
+    links:
+      - "postgres"
+      - "redis"
+      - "skipgram"
+      - "dbow"
+    environment:
+      REDIS_URL: redis://redis:6379/1
+      DATABASE_URL: postgres://athena:athena123@postgres/athena
+      LSTM_URL: http://skipgram:6001
+      HANZO_URL: http://skipgram:6001
+      GRU_URL: http://skipgram:6001
+      FFNN_URL: http://dbow:6002
+      SVM_URL: http://dbow:6002
+      RF_URL: http://dbow:6002
+      GENJI_URL: http://skipgram:6001
+
+  sidekiq:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./:/app
+      - bundler_gems:/usr/local/bundle/
+    command: bundle exec sidekiq -c 1
     depends_on:
       - postgres
       - redis
@@ -59,3 +91,4 @@ services:
 volumes:
   redis:
   postgres:
+  bundler_gems:
